# blindschleiche

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
bls/: n50.py  telogrep.py
blsl/: __init__.py  __main__.py  _utils.py  deepclust2fa.py  ebiosra2rl2s.py  equalbestblast.py  esearchandfetch.py  fai2bed.py  falen.py  farename.py  fastasanitiser.py  fqstat.py  galhist.py  genebed.py  genigvjs.py  gffattr2tsv.py  gffcat.py  gffcsqify.py  gffparse.py  gfftagsane.py  gg2k.py  ildemux.py  ilsample.py  jsonl2csv.py  liftoff_gff3.py  mask2bed.py  n50.py  nstitch.py  pairs.py  pairslash.py  pansn_rename.py  regionbed.py  shannon.py  tabcat.py  tarverify.py  telogrep.py  tidyqc.py  uniref_accessionmap.py  vcfparallel.py  vcfreport.py  (+1 more)
tests/: conftest.py  test_tarverify.py  test_tarverify.sh  test_tarverify_large.sh
