[project]
name = "blindschleiche"
description = "Miscelanelous python-based bioinformatics utils"
authors = [
    { name = "Dr. K. D. Murray", email = "info@gekkonid.com" }
]
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "biopython",
    "cyvcf2",
    "pandas",
    "scikit-learn",
    "physt",
    "plotly",
    "natsort",
]
dynamic = [
    "version",
]
[project.readme]
file = "README.md" 
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
blsl = "blsl:main"


[tool.flit.module]
name = "blsl"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "crash: marks tests that use SIGKILL (deselect with '-m \"not crash\"')",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
